--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,6 +16,7 @@
       <div class="button-grid">
         <button type="button" data-view="overview" class="active">درخواست عضویت</button>
         <button type="button" data-view="pending">بررسی درخواست‌ها</button>
+        <button type="button" data-view="admins">مدیریت ادمین‌ها</button>
         <button type="button" data-view="xp">نمایش لیدربورد XP</button>
         <button type="button" data-view="cups">نمایش جام‌ها</button>
         <button type="button" data-view="analytics">گزارش مدیریتی</button>
@@ -32,6 +33,65 @@
           <h2>درخواست‌های در انتظار بررسی</h2>
           <p id="pending-status" class="status">برای مشاهده داده‌ها روی دکمه بالا کلیک کنید.</p>
           <ul id="pending-list" class="data-list" aria-live="polite"></ul>
+        </section>
+        <section id="view-admins" class="view">
+          <h2>مدیریت ادمین‌ها</h2>
+          <div class="admin-actions">
+            <form id="admin-add-form" class="inline-form card-form">
+              <h3>افزودن ادمین جدید</h3>
+              <label for="admin-add-user-id">شناسه کاربری (User ID)
+                <input
+                  id="admin-add-user-id"
+                  name="user_id"
+                  type="number"
+                  inputmode="numeric"
+                  required
+                  placeholder="مثال: 123456789"
+                />
+              </label>
+              <label for="admin-add-username">نام کاربری تلگرام (اختیاری)
+                <input
+                  id="admin-add-username"
+                  name="username"
+                  type="text"
+                  inputmode="text"
+                  placeholder="مثال: @flyzex"
+                />
+              </label>
+              <label for="admin-add-full-name">نام نمایشی (اختیاری)
+                <input
+                  id="admin-add-full-name"
+                  name="full_name"
+                  type="text"
+                  inputmode="text"
+                  placeholder="مثال: تیم مدیریت"
+                />
+              </label>
+              <button type="submit">افزودن</button>
+              <p id="admin-add-status" class="form-status" aria-live="polite">
+                برای افزودن ادمین شناسه کاربری را وارد کنید.
+              </p>
+            </form>
+            <form id="admin-remove-form" class="inline-form card-form">
+              <h3>حذف ادمین موجود</h3>
+              <label for="admin-remove-user-id">شناسه کاربری (User ID)
+                <input
+                  id="admin-remove-user-id"
+                  name="user_id"
+                  type="number"
+                  inputmode="numeric"
+                  required
+                  placeholder="مثال: 123456789"
+                />
+              </label>
+              <button type="submit">حذف</button>
+              <p id="admin-remove-status" class="form-status" aria-live="polite">
+                شناسه ادمین مورد نظر را برای حذف وارد کنید.
+              </p>
+            </form>
+          </div>
+          <p id="admins-status" class="status" aria-live="polite">فهرست ادمین‌های ثبت شده در این بخش نمایش داده می‌شود.</p>
+          <ul id="admins-list" class="data-list" aria-live="polite"></ul>
         </section>
         <section id="view-xp" class="view">
           <h2>لیدربورد تجربه (XP)</h2>
